@@ -620,27 +620,26 @@ class TextArea(OffsetBox):
         line = info[0][0] # first line
 
         _, hh, dd = renderer.get_text_width_height_descent(
-            clean_line, self._text._fontproperties, ismath=ismath)
+            line, self._text._fontproperties, ismath=ismath)
 
 
         self._baseline_transform.clear()
-        if len(info) > 1 and self._multilinebaseline: # multi line
-            d = h-(hh-dd)  # the baseline of the first line
+        d = h-(hh-dd)  # the baseline of the first line
+        if len(info) > 1 and self._multilinebaseline:
             d_new = 0.5 * h  - 0.5 * (h_ - d_)
-
             self._baseline_transform.translate(0, d - d_new)
             d = d_new
 
         else: # single line
 
-            h_d = max(h_ - d_, h-dd)
+            h_d = max(h_ - d_, h-d)
 
             if self.get_minimumdescent():
                 ## to have a minimum descent, #i.e., "l" and "p" have same
                 ## descents.
-                d = max(dd, d_)
-            else:
-                d = dd
+                d = max(d, d_)
+            #else:
+            #    d = d
 
             h = h_d + d
 
